[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llms"
version = "0.0.1"
authors = [
  { name="Marcio Fonseca", email="thefonseca@gmail.com" },
]
description = "An evaluation tool for language models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "datasets>=2.10.1",
  "fire>=0.5.0",
  "p_tqdm>=1.4.0",
  "rouge_score>=0.1.2",
  "torch>=2.0.0",
  "transformers>=4.27.1",
  "rich>=13.3.2",
  "scipy>=1.10.1",
  "diskcache>=5.4.0",
  "openai>=0.27.2",
  "tiktoken>=0.3.1",
  "cohere>=4.0.2",
  "accelerate>=0.17.1",
  "sentencepiece>=0.1.97",
  "bitsandbytes>=0.37.1",
  "fschat==0.2.20",
  "protobuf>=3.20.0",
  "arxiv>=1.4.7",
  "pdfminer.six==20221105",
  "textdistance==4.5.0",
  "textstat==0.7.3"
]

[project.urls]
"Homepage" = "https://github.com/thefonseca/llms"
"Bug Tracker" = "https://github.com/thefonseca/llms/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llms*"]